[package]
name = "containers"
version = "0.9.8"
authors = ["M Farkas-Dyck <strake888@gmail.com>"]
description = "Containers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/strake/containers.rs"
documentation = "https://docs.rs/containers/"

[dependencies]
default_allocator = { version = "0.3", optional = true }
either = { version = "1.4", default-features = false }
fallible = "0.1"
hash-table = "0.2.4"
heap = "0.1"
loca = "0.7"
ptr = "0.2.2"
null-terminated = { version = "0.3.14", optional = true }
rel = "0.2"
serde = { version = "1.0.114", optional = true, default-features = false }
unreachable = "1.0"

[dev-dependencies]
default_allocator = "0.3"
quickcheck = "0.8"
quickcheck_macros = "0.8"
rand = "0.6"

[features]
default = ["box"]
box = []

[patch.crates-io]
higher = { path = "../higher.rs/lib" }
higher-cat = { path = "../higher.rs/cat" }
